--- a/dogotel-frontend/src/components/SearchBox/Search.css
+++ b/dogotel-frontend/src/components/SearchBox/Search.css
@@ -1,7 +1,6 @@
 .search-inputs {
   display: flex;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 34px;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -9,31 +8,44 @@
 .input-group {
   display: flex;
   flex-direction: column;
+  justify-content: end;
+  gap: 6px;
 }
 
 .input-group label {
   margin-bottom: 5px;
   font-weight: bold;
+  text-align: left;
+  padding-left: 3px;
 }
 
 .input-group input[type="date"],
 .input-group select {
-  padding: 10px;
+  padding: 13px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .search-button {
-  background-color: #5cb85c;
+  background-color: var(--font-brown-dark);
   color: white;
-  padding: 12px 20px;
+  padding: 12px 40px;
   border: none;
-  border-radius: 4px;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 1em;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  font-weight: 600;
+  padding-bottom: 15px;
 }
 
 .search-button:hover {
-  background-color: #4cae4c;
+  background-color: #a68270;
+  transform: scale(1.05);
+  text-decoration-line: none;
+}
+
+#dogs {
+  margin: 0;
+  height: 48px;
 }
