--- a/dogotel-frontend/src/components/ServiceCard/ServiceCard.css
+++ b/dogotel-frontend/src/components/ServiceCard/ServiceCard.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  border: var(--font-brown-dark) 1px solid;
   background-color: #f8f2eb;
   border-radius: 50px;
   gap: 40px;
