--- a/dogotel-frontend/src/components/Navbar/Navbar.css
+++ b/dogotel-frontend/src/components/Navbar/Navbar.css
@@ -85,15 +85,16 @@
 .user-info {
   display: flex;
   align-items: center;
-  gap: 6px;
-  background: #dedcdc;
-  padding: 5px 5px;
+  gap: 10px;
+  background: #ffffff;
+  padding: 5px 8px;
   border-radius: 50px;
-  padding-right: 10px;
+  border: var(--font-brown-dark) 1px solid;
+  padding-right: 13px;
 }
 
 .user-avatar {
-  background: #bbb;
+  background: #a572292b;
   color: var(--font-brown-dark);
   font-weight: bold;
   border-radius: 999px;
