--- a/dogotel-frontend/src/components/Navbar/Navbar.css
+++ b/dogotel-frontend/src/components/Navbar/Navbar.css
@@ -62,9 +62,9 @@
   gap: 20px;
 }
 
-.login-btn,
-.signup-btn,
-.logout-btn {
+.navbar .login-btn,
+.navbar .signup-btn,
+.navbar .logout-btn {
   border: 1px solid var(--font-brown-dark);
   padding: 6px 20px;
   padding-bottom: 10px;
@@ -75,11 +75,12 @@
   font-weight: 500;
   cursor: pointer;
   transition: background 0.3s;
+  text-wrap-mode: nowrap;
 }
 
-.login-btn:hover,
-.signup-btn:hover,
-.logout-btn:hover {
+.navbar .login-btn:hover,
+.navbar .signup-btn:hover,
+.navbar .logout-btn:hover {
   background: var(--font-brown-dark);
   color: #fff;
 }
