--- a/dogotel-frontend/src/pages/ARoom/ARoom.css
+++ b/dogotel-frontend/src/pages/ARoom/ARoom.css
@@ -188,3 +188,21 @@
   background-color: #3b1d0f;
   color: white;
 }
+
+.add-review-btn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  padding-bottom: 12px;
+  background-color: #3b1d0f;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-review-btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
